--- a/airDetails.html
+++ b/airDetails.html
@@ -2,7 +2,7 @@
  * @Description: 详情页
  * @Author: wish.WuJunLong
  * @Date: 2021-08-31 09:38:41
- * @LastEditTime: 2021-09-16 11:19:11
+ * @LastEditTime: 2021-09-17 17:48:57
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -582,7 +582,12 @@
           .then(function (data) {
             $("#loading").hide();
 
-            if (data.status === 0) {
+            if (data.status === 0 || data.status === 27) {
+              // if (data.status === 27) {
+              //   $("#warning_tip").addClass("ax-window-show");
+              //   $("#warning_tip .ax-tips-title").html("编码已出票");
+              //   $("#warning_tip .ax-tips-des").html("");
+              // }
               // 航班信息
               airMessage = data;
 
@@ -746,10 +751,18 @@
                 airMessage.currency +
                 "</p>" +
                 "<span>" +
-                priceTotal +
+                priceTotal.toFixed(2) +
                 "</span>" +
                 "</div>";
               $(".price_main").html(priceList);
+            } else if (data.status === 26) {
+              $("#warning_tip").addClass("ax-window-show");
+              $("#warning_tip .ax-tips-title").html("编码已取消");
+              $("#warning_tip .ax-tips-des").html("");
+            } else if (data.status === 96) {
+              $("#warning_tip").addClass("ax-window-show");
+              $("#warning_tip .ax-tips-title").html("无航班");
+              $("#warning_tip .ax-tips-des").html("");
             } else {
               $("#warning_tip").addClass("ax-window-show");
               $("#warning_tip .ax-tips-title").html("获取数据失败");
@@ -919,21 +932,37 @@
               if (data.status === 0) {
                 // 航班信息
 
-                var newTab = window.open();
-                newTab.opener = null;
-                newTab.location =
+                var newPageUrl =
                   "/airdetails.html?pnr=" +
                   data.pnrCode +
                   (data.otherCode ? "&o=" + data.otherCode : "") +
                   "&t=" +
                   configType;
+                var aLabel = document.createElement("a");
+                //设置链接
+                aLabel.setAttribute("href", newPageUrl);
+                //新窗口打开链接
+                aLabel.setAttribute("target", "_blank");
+                //设置标签ID
+                aLabel.setAttribute("id", "reportpoint");
+                // 防止反复添加
+                if (document.getElementById("reportpoint")) {
+                  document.body.removeChild(document.getElementById("reportpoint"));
+                }
+                document.body.appendChild(aLabel);
+                aLabel.click();
+                console.log("打开链接:", newPageUrl);
 
                 getDomData();
 
                 $("#selectOrderMessage").removeClass("ax-window-show");
                 $("#success_tip").addClass("ax-window-show");
                 $("#success_tip .ax-tips-title").html("订单拆分成功");
-                $("#success_tip .ax-tips-des").html("已获取最新订单数据");
+                $("#success_tip .ax-tips-des").html(
+                  "<a class='jump_orderDetail_btn' href=" +
+                    newPageUrl +
+                    " target='_blank'>前往新拆分订单页面<a/>"
+                );
               } else {
                 $("#warning_tip").addClass("ax-window-show");
                 $("#warning_tip .ax-tips-title").html("获取数据失败");
