正式测试切换

--- a/airReservation.html
+++ b/airReservation.html
@@ -409,7 +409,7 @@
           '<div class="list_item" style="display: none">' +
           '<div class="item_name">乘客类型：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="0">成人</option>' +
           "</select>" +
           "</div>" +
@@ -417,7 +417,7 @@
           '<div class="list_item">' +
           '<div class="item_name">性别：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="0">男</option>' +
           '<option value="1">女</option>' +
           "</select>" +
@@ -454,7 +454,7 @@
           '<div class="list_item">' +
           '<div class="item_name">证件类型：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="PP">护照</option>' +
           '<option value="OT">其他</option>' +
           '<option value="ID">身份证</option>' +
@@ -494,7 +494,7 @@
           '<div class="list_item" style="display: none">' +
           '<div class="item_name">乘客类型：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="1">儿童</option>' +
           "</select>" +
           "</div>" +
@@ -502,7 +502,7 @@
           '<div class="list_item">' +
           '<div class="item_name">性别：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="0">男</option>' +
           '<option value="1">女</option>' +
           "</select>" +
@@ -539,7 +539,7 @@
           '<div class="list_item">' +
           '<div class="item_name">证件类型：</div>' +
           '<div class="item_input">' +
-          '<select class="ax-square pas_data">' +
+          '<select class="ax-select ax-square pas_data">' +
           '<option value="PP">护照</option>' +
           '<option value="OT">其他</option>' +
           '<option value="ID">身份证</option>' +
