--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Description: 首页
  * @Author: wish.WuJunLong
  * @Date: 2021-07-22 16:47:18
- * @LastEditTime: 2021-09-17 16:55:44
+ * @LastEditTime: 2021-10-11 16:34:56
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -90,7 +90,7 @@
             <div class="search_list">
               <div class="list_item">
                 <div class="search_title">成人</div>
-                <select id="adtNumber">
+                <select class="ax-select" id="adtNumber">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -104,7 +104,7 @@
               </div>
               <div class="list_item">
                 <div class="search_title">儿童</div>
-                <select id="chdNumber">
+                <select class="ax-select" id="chdNumber">
                   <option value="0">0</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -120,7 +120,7 @@
             </div>
             <div class="list_item">
               <div class="search_title">渠道</div>
-              <select id="configType"></select>
+              <select class="ax-select" id="configType"></select>
             </div>
             <div class="search_list submit_btn">
               <button
