--- a/ticketCode.html
+++ b/ticketCode.html
@@ -30,7 +30,7 @@
     <div class="code_search">
       <div class="search_list">
         <div class="search_title">渠道</div>
-        <select id="configType"></select>
+        <select class="ax-select" id="configType"></select>
       </div>
       <div class="search_list">
         <div class="search_title">PNR</div>
