--- a/airDetails.html
+++ b/airDetails.html
@@ -2,7 +2,7 @@
  * @Description: 详情页
  * @Author: wish.WuJunLong
  * @Date: 2021-08-31 09:38:41
- * @LastEditTime: 2021-10-11 16:37:15
+ * @LastEditTime: 2021-10-19 15:54:28
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -1219,7 +1219,7 @@
             },
             display: "bubble",
             dateFormat: "yy-mm-dd",
-            min: selectAirTime[0].depTime,
+            min: new Date(),
             max:
               notSelectAirTime.length > 0
                 ? new Date(selectAirTime[0].depTime.split(" ")[0]) <
