--- a/airReservation.html
+++ b/airReservation.html
@@ -2,7 +2,7 @@
  * @Description: 预定页面
  * @Author: wish.WuJunLong
  * @Date: 2021-08-03 15:57:24
- * @LastEditTime: 2021-09-17 17:42:02
+ * @LastEditTime: 2021-10-20 10:58:45
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -482,6 +482,12 @@
           ')" type="text"/>' +
           "</div>" +
           "</div>" +
+          '<div class="list_item">' +
+          '<div class="item_name">证件发行国：</div>' +
+          '<div class="item_input">' +
+          '<input placeholder="输入证件发行国" value="" class="ax-md pas_data" type="text" onkeyup="toUpperCase(this)" style="text-transform:uppercase"/>' +
+          "</div>" +
+          "</div>" +
           "</div>";
       }
 
@@ -772,6 +778,7 @@
               cardType: passenger[6], // 证件类型 OT: 其他;ID: 身份证;PP: 护照;GA: 港澳通行证;TW: 台湾通行证;TB: 台胞证;HX: 回乡证;HY: 国际海员证;
               cardNumber: passenger[7], //证件号码
               cardExpired: passenger[8], //证件到期日期
+              cardIssuePlace: passenger[9], // 证件发行国
               airCode: null,
               airMemberNo: null,
               passengerAddress: null,
