接口地址更换、取消版本切换功能

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Description: 首页
  * @Author: wish.WuJunLong
  * @Date: 2021-07-22 16:47:18
- * @LastEditTime: 2021-10-11 16:34:56
+ * @LastEditTime: 2021-11-18 09:27:55
  * @LastEditors: wish.WuJunLong
 -->
 
@@ -353,6 +353,8 @@
             cabinlevel: "Y",
             data: "",
           };
+
+          console.log(config.airConfig);
 
           sessionStorage.setItem("ticketData", JSON.stringify(ticketData));
         });
